<package format="2">
<name>idscanner</name>
<version>0.0.0</version>
<description>The idscanner package</description>
<!--
 One maintainer tag required, multiple allowed, one person per tag 
-->
<!-- Example:  -->
<!--
 <maintainer email="jane.doe@example.com">Jane Doe</maintainer> 
-->
<maintainer email="ebensl20@student.aau.dk">Elias B. Slama</maintainer>
<!--
 One license tag required, multiple allowed, one license per tag 
-->
<!-- Commonly used license strings: -->
<!--
   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 
-->
<license>MIT</license>
<!--
 Url tags are optional, but multiple are allowed, one per tag 
-->
<!--
 Optional attribute type can be: website, bugtracker, or repository 
-->
<!-- Example: -->
<!-- <url type="website">http://wiki.ros.org/P1</url> -->
<!--
 Author tags are optional, multiple are allowed, one per tag 
-->
<!--
 Authors do not have to be maintainers, but could be 
-->
<!-- Example: -->
<author email="ebensl20@student.aau.dk">Elias B. Slama</author>
-->
<buildtool_depend>catkin</buildtool_depend>
<depend>roscpp</depend>
<export> </export>
</package>